--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -215,7 +215,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,49 +226,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "('A[] not (LV1Pedestrian2.Crossing and Cars.Crossing)',\n",
-       " ['pWantCrss', 'pGreen', 'pCrss', 'cWantCrss', 'cGreen'])"
-      ]
-     },
-     "execution_count": 12,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "model_path = 'Pedestrian.xml'\n",
-    "umod = pyu.UModel(model_path=model_path)\n",
-    "query = f'A[] not (LV1Pedestrian2.Crossing and Cars.Crossing)'\n",
-    "umod.find_a_pattern_with_query(query=query, focused_actions=None, hold=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['pCrss',\n",
-       " 'cYellow',\n",
-       " 'pWantCrss',\n",
-       " 'pGreen',\n",
-       " 'pRed',\n",
-       " 'cGreen',\n",
-       " 'pFinish',\n",
-       " 'cRed',\n",
-       " 'pYellow',\n",
-       " 'cWantCrss']"
+       "('A[] not (LV1Pedestrian2.Crossing and Cars.Crossing)',\n",
+       " ['pCheckLight', 'pRed', 'cCheckLight', 'cGreen'])"
       ]
      },
      "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "model_path = 'Pedestrian_3.xml'\n",
+    "umod = pyu.UModel(model_path=model_path)\n",
+    "query = f'A[] not (LV1Pedestrian2.Crossing and Cars.Crossing)'\n",
+    "umod.find_a_pattern_with_query(query=query, focused_actions=None, hold=True)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['pRed',\n",
+       " 'pFinish',\n",
+       " 'cRed',\n",
+       " 'pGreen',\n",
+       " 'cGreen',\n",
+       " 'cCheckLight',\n",
+       " 'pCheckLight',\n",
+       " 'pYellow',\n",
+       " 'cYellow',\n",
+       " 'cCrss',\n",
+       " 'pCrss']"
+      ]
+     },
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -279,60 +280,180 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 22,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "model_path = 'Pedestrian.xml'\n",
-    "umod = pyu.UModel(model_path=model_path)\n",
-    "query = f'A[] not (LV1Pedestrian2.Crossing and Cars.Crossing)'\n",
-    "umod.find_a_pattern_with_query(query=query, focused_actions=None, hold=False)\n",
-    "res = umod.find_all_patterns_with_query(query=query, focused_actions=[\"pWantCrss\", \"pGreen\", \"pRed\", \"pYellow\", \"cGreen\", \"pCrss\", \"pFinish\"], hold=True, max_patterns=50)"
+    "# Find_all_pattern"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "[('A[] not (PPedestrian.Crossing and PCar.Crossing)',\n",
+       "  ['pCheckLight', 'pRed', 'cCrss']),\n",
+       " ('E<> ! not (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass',\n",
+       "  ['cCrss', 'pCheckLight', 'pRed']),\n",
+       " ('E<> ! not (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass',\n",
+       "  ['pCheckLight', 'pGreen', 'cCrss']),\n",
+       " ('E<> ! not (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass && !Monitor3.pass',\n",
+       "  ['pCheckLight', 'pYellow', 'cCrss'])]"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import pyuppaal as pyu\n",
+    "pyu.set_verifyta_path(r'D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe')\n",
+    "# Set UPPAAL model path and creat an UModel instance.\n",
+    "umod = pyu.UModel(model_path='Pedestrian_new.xml')\n",
+    "# Set a query\n",
+    "query = f'A[] not (PPedestrian.Crossing and PCar.Crossing)'\n",
+    "# Set the focused broadcast chan\n",
+    "focused_actions = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"]\n",
+    "# use find_all_patterns_with_query to get all patterns.\n",
+    "res = umod.find_all_patterns_with_query(query=query, focused_actions=focused_actions, hold=True)\n",
+    "res"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Simple verification"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "diagnostic:<0|1|2>   Generate diagnostic information on \n",
+    "\n",
+    "                        stderr.\n",
+    "\n",
+    "                        0: Some trace\n",
+    "\n",
+    "                        1: Shortest trace (disables reuse)\n",
+    "\n",
+    "                        2: Fastest trace (disables reuse)\n",
+    "search-order:  <0|1|2|3|4>  Select search order.  Only 0 and 1 for\n",
+    "                            \n",
+    "                            TIGA properties.\n",
+    "                            \n",
+    "                            0: Breadth first (short-hand -b)\n",
+    "                            \n",
+    "                            1: Depth first (short-hand -d)\n",
+    "                            \n",
+    "                            2: Random depth first\n",
+    "                            \n",
+    "                            3: Optimal first (requires -t1 or -t2)\n",
+    "                            \n",
+    "                            4: Random optimal depth first\n",
+    "                                       (requires -t1 or -t2)\n",
+    "statespace-consumption: <0|1|2|3>   Optimize space consumption \n",
+    "                                        \n",
+    "                                    0 = none,\n",
+    "                                    \n",
+    "                                    1 = default\n",
+    "                                    \n",
+    "                                    2 = aggressive\n",
+    "\n",
+    "                                    3 = extreme"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "diagnostic = ['Some trace', 'Shortest trace (disables reuse)', 'Fastest trace (disables reuse)']\n",
+    "search_order = ['Breadth first (short-hand -b)', 'Depth first (short-hand -d)', 'Random depth first', 'Optimal first (requires -t1 or -t2)', 'Random optimal depth first (requires -t1 or -t2)']\n",
+    "statespace_consumption = ['none', 'default', 'aggressive', 'extreme']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "4\n"
+      "-------------------------------------\n",
+      "['--diagnostic', '0', '--search-order', '0']\n",
+      "diagnostic: 0-Some trace; search_order: 0-Breadth first (short-hand -b);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '0', '--search-order', '1']\n",
+      "diagnostic: 0-Some trace; search_order: 1-Depth first (short-hand -d);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '0', '--search-order', '2']\n",
+      "diagnostic: 0-Some trace; search_order: 2-Random depth first;\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pYellow', 'cGreen'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '1', '--search-order', '0']\n",
+      "diagnostic: 1-Shortest trace (disables reuse); search_order: 0-Breadth first (short-hand -b);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '1', '--search-order', '1']\n",
+      "diagnostic: 1-Shortest trace (disables reuse); search_order: 1-Depth first (short-hand -d);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '1', '--search-order', '2']\n",
+      "diagnostic: 1-Shortest trace (disables reuse); search_order: 2-Random depth first;\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '1', '--search-order', '3']\n",
+      "diagnostic: 1-Shortest trace (disables reuse); search_order: 3-Optimal first (requires -t1 or -t2);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '1', '--search-order', '4']\n",
+      "diagnostic: 1-Shortest trace (disables reuse); search_order: 4-Random optimal depth first (requires -t1 or -t2);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '2', '--search-order', '0']\n",
+      "diagnostic: 2-Fastest trace (disables reuse); search_order: 0-Breadth first (short-hand -b);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '2', '--search-order', '1']\n",
+      "diagnostic: 2-Fastest trace (disables reuse); search_order: 1-Depth first (short-hand -d);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['cGreen', 'pCheckLight', 'pRed'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '2', '--search-order', '2']\n",
+      "diagnostic: 2-Fastest trace (disables reuse); search_order: 2-Random depth first;\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '2', '--search-order', '3']\n",
+      "diagnostic: 2-Fastest trace (disables reuse); search_order: 3-Optimal first (requires -t1 or -t2);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n",
+      "-------------------------------------\n",
+      "['--diagnostic', '2', '--search-order', '4']\n",
+      "diagnostic: 2-Fastest trace (disables reuse); search_order: 4-Random optimal depth first (requires -t1 or -t2);\n",
+      "('A[] not (PPedestrian.Crossing and PCar.Crossing)', ['pCheckLight', 'pRed', 'cGreen'])\n"
      ]
     }
    ],
    "source": [
-    "print(len(res))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('A[] not (LV1Pedestrian2.Crossing and Cars.Crossing)',\n",
-       "  ['pWantCrss', 'pGreen', 'pCrss', 'cGreen']),\n",
-       " ('E<> ! not (LV1Pedestrian2.Crossing and Cars.Crossing) && !Monitor1.pass',\n",
-       "  ['pWantCrss', 'pRed', 'pCrss', 'cGreen']),\n",
-       " ('E<> ! not (LV1Pedestrian2.Crossing and Cars.Crossing) && !Monitor1.pass && !Monitor2.pass',\n",
-       "  ['cGreen', 'pWantCrss', 'pRed', 'pCrss']),\n",
-       " ('E<> ! not (LV1Pedestrian2.Crossing and Cars.Crossing) && !Monitor1.pass && !Monitor2.pass && !Monitor3.pass',\n",
-       "  ['pWantCrss', 'pYellow', 'pCrss', 'cGreen'])]"
-      ]
-     },
-     "execution_count": 24,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "res"
+    "for t in range(3):\n",
+    "    for s in range(5):\n",
+    "        if (s == 3 and t ==0) or (s == 4 and t == 0):\n",
+    "                continue\n",
+    "        options = [\"--diagnostic\", str(t), \"--search-order\", str(s)]\n",
+    "        res = umod.find_a_pattern_with_query(query = query, focused_actions=focused_actions, options = options, hold =True)\n",
+    "        print('-------------------------------------')\n",
+    "        print(options)\n",
+    "        print(f'diagnostic: {t}-{diagnostic[t]}; search_order: {s}-{search_order[s]};')\n",
+    "        print(res)"
    ]
   },
   {
