--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -288,23 +288,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('A[] not (PPedestrian.Crossing and PCar.Crossing)',\n",
+       "[('E<> (PPedestrian.Crossing and PCar.Crossing)',\n",
        "  ['pCheckLight', 'pRed', 'cCrss']),\n",
-       " ('E<> ! not (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass',\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass',\n",
        "  ['cCrss', 'pCheckLight', 'pRed']),\n",
-       " ('E<> ! not (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass',\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass',\n",
        "  ['pCheckLight', 'pGreen', 'cCrss']),\n",
-       " ('E<> ! not (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass && !Monitor3.pass',\n",
+       " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass && !Monitor3.pass',\n",
        "  ['pCheckLight', 'pYellow', 'cCrss'])]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 1,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -312,13 +312,9 @@
    "source": [
     "import pyuppaal as pyu\n",
     "pyu.set_verifyta_path(r'D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe')\n",
-    "# Set UPPAAL model path and creat an UModel instance.\n",
-    "umod = pyu.UModel(model_path='Pedestrian_new.xml')\n",
-    "# Set a query\n",
-    "query = f'A[] not (PPedestrian.Crossing and PCar.Crossing)'\n",
-    "# Set the focused broadcast chan\n",
-    "focused_actions = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"]\n",
-    "# use find_all_patterns_with_query to get all patterns.\n",
+    "umod = pyu.UModel(model_path='Pedestrian_new.xml') # Set UPPAAL model path and creat an UModel instance.\n",
+    "query = f'A[] not (PPedestrian.Crossing and PCar.Crossing)' # property query φ\n",
+    "focused_actions = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"] # focused actions\n",
     "res = umod.find_all_patterns_with_query(query=query, focused_actions=focused_actions, hold=True)\n",
     "res"
    ]
