--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -288,23 +288,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
        "[('E<> (PPedestrian.Crossing and PCar.Crossing)',\n",
-       "  ['pCheckLight', 'pRed', 'cCrss']),\n",
+       "  ['pCheckLight', 'pRed', 'pCrss', 'cCrss']),\n",
        " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass',\n",
-       "  ['cCrss', 'pCheckLight', 'pRed']),\n",
+       "  ['cCrss', 'pCheckLight', 'pRed', 'pCrss']),\n",
        " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass',\n",
-       "  ['pCheckLight', 'pGreen', 'cCrss']),\n",
+       "  ['pCheckLight', 'pGreen', 'pCrss', 'cCrss']),\n",
        " ('E<> (PPedestrian.Crossing and PCar.Crossing) && !Monitor1.pass && !Monitor2.pass && !Monitor3.pass',\n",
-       "  ['pCheckLight', 'pYellow', 'cCrss'])]"
+       "  ['pCheckLight', 'pYellow', 'pCrss', 'cCrss'])]"
       ]
      },
-     "execution_count": 1,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -313,10 +313,9 @@
     "import pyuppaal as pyu\n",
     "pyu.set_verifyta_path(r'D:/Softwares/uppaal64-4.1.25-5/bin-Windows/verifyta.exe')\n",
     "umod = pyu.UModel(model_path='Pedestrian_new.xml') # Set UPPAAL model path and creat an UModel instance.\n",
-    "query = f'A[] not (PPedestrian.Crossing and PCar.Crossing)' # property query φ\n",
+    "query = f'E<> (PPedestrian.Crossing and PCar.Crossing)' # property query\n",
     "focused_actions = [\"pCheckLight\", \"pGreen\", \"pRed\", \"pYellow\", \"pCrss\", \"cCrss\"] # focused actions\n",
-    "res = umod.find_all_patterns_with_query(query=query, focused_actions=focused_actions, hold=True)\n",
-    "res"
+    "umod.find_all_patterns_with_query(query=query, focused_actions=focused_actions, hold=True)"
    ]
   },
   {
