--- a/src/tests/demo.ipynb
+++ b/src/tests/demo.ipynb
@@ -455,7 +455,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# 存在的问题"
+    "# 存在的问题(bugs)"
    ]
   },
   {
@@ -463,8 +463,7 @@
    "metadata": {},
    "source": [
     "1. boardcast chan 需要设置在declarations里，如果设置在system里，会导致创建的monitor中的chan无法识别。\n",
-    "2. add_system函数是简单的在system的末尾追加新的monitor名称，如果system的末尾是注释或其他则回出错\n",
-    "3. find_all_patter可能是无穷个的，如车和行人的例子，设置了一个最大find_patterns的个数"
+    "2. add_system函数是简单的在system的末尾追加新的monitor名称，如果system的末尾是注释或其他则回出错"
    ]
   }
  ],
